// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden: simulation log ordering (ADR-0028 oracle) > coord pair — a hitLanded fires a coordHit damage + heal 1`] = `
"@   0 ACTION c1 "Normal Attack" [Basic Attack] E=0 C=0
@   0 HIT   c1 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=3492 E=5.920 C=2 buffs=[]
@   0 BUFF+ gold.coord-pair src=c1 tgt=c1
@   0 HIT   c1 "Coord Pair" [Basic Attack/Fusion] dmg=2794 E=5.920 C=2 buffs=[gold.coord-pair] (coord from=gold.coord-pair)
@   0 HEAL  c1 "Coord Pair" [heal] amt=1041 tgt=[1] E=5.920 C=2 buffs=[gold.coord-pair] (coord from=gold.coord-pair)"
`;

exports[`golden: simulation log ordering (ADR-0028 oracle) > emit chain — an authored hit triggers a synthetic emitHit 1`] = `
"@   0 ACTION c1 "Normal Attack" [Basic Attack] E=0 C=0
@   0 HIT   c1 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=3492 E=5.920 C=2 buffs=[]
@   0 BUFF+ gold.emit-on-hit src=c1 tgt=c1
@   0 HIT   c1 "Emit On Hit" [Basic Attack/Fusion] dmg=4657 E=5.920 C=2 buffs=[gold.emit-on-hit] (synth from=gold.emit-on-hit)"
`;

exports[`golden: simulation log ordering (ADR-0028 oracle) > same-frame collision — two damage entries land on frame 0 1`] = `
"@   0 ACTION c1 "Normal Attack" [Basic Attack] E=0 C=0
@   0 HIT   c1 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=3492 E=5.920 C=2 buffs=[]
@   0 HIT   c1 "Normal Attack [hit 2]" [Basic Attack/Fusion] dmg=1863 E=9.472 C=3 buffs=[]"
`;

exports[`golden: simulation log ordering (ADR-0028 oracle) > swap + energy share — two characters, energy shared to teammate 1`] = `
"@   0 ACTION c1 "Normal Attack" [Basic Attack] E=0 C=0
@   0 HIT   c1 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=3492 E=23.680 C=10 buffs=[]
@  60 ACTION c2 "Normal Attack" [Basic Attack] E=11.840 C=0
@  60 HIT   c2 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=1863 E=16.576 C=2 buffs=[]"
`;

exports[`golden: simulation log ordering (ADR-0028 oracle) > trailing hit interleaves frame-honestly with a later entry's hit (ADR-0028 endgame) 1`] = `
"@   0 ACTION c1 "Normal Attack" [Basic Attack] E=0 C=0 var=swap
@   0 HIT   c1 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=3492 E=0 C=0 buffs=[]
@   6 ACTION c2 "Normal Attack" [Basic Attack] E=0 C=0
@  30 HIT   c1 "Normal Attack [hit 2]" [Basic Attack/Fusion] dmg=4657 E=0 C=0 buffs=[]
@  46 HIT   c2 "Normal Attack [hit 1]" [Basic Attack/Fusion] dmg=1863 E=0 C=0 buffs=[]"
`;
